2003-02-13  Michael Shields  <shields@msrl.com>

	* gnus-cite.el
	(gnus-cite-attribution-suffix, gnus-cite-parse):
	Better handling for Microsoft citation styles.
	(gnus-unsightly-citation-regexp): New.

2003-02-12  Michael Shields  <shields@msrl.com>

	* gnus-art.el (article-strip-banner): Strip both per-group and
	per-user-address banners.
	(article-really-strip-banner): New.

2003-02-12  Michael Shields  <shields@msrl.com>

	* gnus-sum.el (gnus-article-goto-next-page,
	gnus-article-goto-prev-page): Call gnus-summary-*-page, instead of
	relying on the summary bindings of `n' and `p'.

2003-02-12  Michael Shields  <shields@msrl.com>

	* gnus-art.el (gnus-article-only-boring-p): New.
	(gnus-article-skip-boring): New.
	* gnus-cite.el (gnus-article-boring-faces): New.
	* gnus-sum.el (gnus-summary-next-page): Use
	gnus-article-only-boring-p.

2003-02-12  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-mark-spam-as-expired-and-move-routine)
	(spam-ham-move-routine): unmark all articles before marking those
	of interest and calling gnus-summary-move-article

2003-02-12  Jesper Harder  <harder@ifa.au.dk>

	* gnus.el (gnus-kill-buffer): Move to gnus.el because it's
	logically the complement of gnus-get-buffer-create and
	gnus-add-buffer.

	* gnus-util.el (gnus-kill-buffer): do.

	* nnmail.el: Autoload gnus-kill-buffer.

2002-02-11  Kevin Greiner  <kgreiner@xpediantsolutions.com>

	* gnus-agent.el (gnus-summary-set-agent-mark): Added call to
	gnus-summary-goto-subject as gnus-summary-update-mark operates on
	the current LINE.
	(gnus-agent-summary-fetch-group): Minimized the number of times
	that the article is updated in the buffer.
	
2003-02-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-ham-move-routine): use the process-mark instead of
	gnus-current-article when moving articles
	(spam-mark-spam-as-expired-and-move-routine): ditto, use the process-mark

2003-02-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>
